[package]
name = "miniscript"
version = "9.0.0"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/Groestlcoin/rust-miniscript/"
repository = "https://github.com/Groestlcoin/rust-miniscript/"
description = "Miniscript: a subset of Groestlcoin Script designed for analysis"
keywords = [ "crypto", "groestlcoin", "miniscript", "script" ]
readme = "README.md"
edition = "2018"

[features]
default = ["std"]
std = ["groestlcoin/std", "groestlcoin/secp-recovery"]
no-std = ["hashbrown", "groestlcoin/no-std"]
compiler = []
trace = []

unstable = []
serde = ["actual-serde", "groestlcoin/serde"]
rand = ["groestlcoin/rand"]
base64 = ["groestlcoin/base64"]

[dependencies]
groestlcoin = { version = "0.29.0", default-features = false }
hashbrown = { version = "0.11", optional = true }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", optional = true }

[dev-dependencies]
serde_test = "1.0.147"
groestlcoin = { version = "0.29.0", features = ["base64"] }
secp256k1 = {version = "0.24.0", features = ["rand-std"]}
actual-base64 = { package = "base64", version = "0.13.0" }

[[example]]
name = "htlc"
required-features = ["std", "compiler"]

[[example]]
name = "parse"
required-features = ["std"]

[[example]]
name = "sign_multisig"
required-features = ["std"]

[[example]]
name = "verify_tx"
required-features = ["std"]

[[example]]
name = "psbt"
required-features = ["std"]

[[example]]
name = "xpub_descriptors"
required-features = ["std"]

[[example]]
name = "taproot"
required-features = ["compiler","std"]

[[example]]
name = "psbt_sign_finalize"
required-features = ["std", "base64"]

[workspace]
members = ["bitcoind-tests", "fuzz"]
exclude = ["embedded"]
