[package]
name = "groestlcoind-tests"
version = "0.1.0"
authors = ["Groestlcoin Developers <groestlcoin@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniscript = {path = "../"}
bitcoind = { version = "0.30.0" }
actual-rand = { package = "rand", version = "0.8.4"}
secp256k1 = {version = "0.27.0", features = ["rand-std"]}
internals = { package = "groestlcoin-private", version = "0.1.0", default_features = false }
